# periodlib

./: CMakeLists.txt  Makefile  README.md
src/: dbf.cpp  dbf.h  estimate.cpp  etc.cpp  etc.h  experiment.cpp  kmp.cpp  kmp.h  main.cpp  measure.cpp  period.cpp  period.h
